# phosphobot

./: .gitmodules  CONTRIBUTING.md  Makefile  README.md  install.sh
.github/workflows/: deploy_modal.yml  mypy_tests.yml  publish.yml
cloud/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
cloud/frontend/app/: layout.tsx  page.tsx
cloud/frontend/components/: auth-button.tsx  login-form.tsx  sign-up-form.tsx
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx  types.ts
dashboard/src/context/: AuthContext.tsx
dashboard/src/pages/: AIControlPage.tsx  AITrainingPage.tsx  AdminSettingsPage.tsx  BrowsePage.tsx  ControlPage.tsx  DashboardPage.tsx  NetworkPage.tsx  ViewVideoPage.tsx
inference/ACT/: client.py  server.py
modal/: Makefile  README.md  pyproject.toml
modal/act/: Dockerfile
modal/act/src/: app.py  helper.py
modal/admin/: app.py
modal/gr00t/: Dockerfile
modal/gr00t/src/: app.py  helper.py
modal/paligemma/: app.py
modal/tests/: test_paligemma.py
phosphobot/: .gitignore  README.md  pyproject.toml
phosphobot/phosphobot/: ai_control.py  app.py  camera.py  configs.py  leader_follower.py  main.py  posthog.py  recorder.py  rerun_visualizer.py  robot.py  sentry.py  supabase.py  teleoperation.py  utils.py
phosphobot/resources/: agilex_can_activate.sh  tokens.toml
phosphobot/tests/: utils.py
quest-app/: .gitignore  build.sh
scripts/: quickstart_ai.py
scripts/feetech/: README.md  pyproject.toml
simulation/pybullet/: README.md  main.py  pyproject.toml
(+92 files in other folders)
