[project]
name = "inference"
version = "0.1.0"
description = "Inference server using Modal Labs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "modal>=0.73.135",
    "mypy>=1.15.0",
    "replicate>=1.0.4",
    "requests>=2.32.4",
    "supabase>=2.15.0",
    "phosphobot>=0.3.0",
    "wandb>=0.19.10",
    "sentry-sdk>=2.26.1",
    "torch>=2.7.0",
    "einops>=0.8.1",
    "torchvision>=0.22.0",
    "transformers>=4.52.4",
    "hf-xet>=1.1.3",
]


[tool.uv.sources]
phosphobot = { editable = true, path = "../phosphobot" }
